microservice-root-kubernetes-latest/simple-app-for-kube/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-for-kube
  labels:
    app: simple-app-for-kube
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app-for-kube
  template:
    metadata:
      labels:
        app: simple-app-for-kube
    spec:
#      serviceAccountName: spring-cloud-kubernetes
      containers:
      - name: simple-app-for-kube
        image: sudiptaghosh2006/simple-app-for-kube
        ports:
        - containerPort: 8080     # Port the application listens to
