microservice-root-kubernetes-latest/simple-app-for-kube/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com            # Replace with your domain or use a dummy host
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-app-for-kube-service
              port:
                number: 80
